overlay/prod/demo.einsteiners.us/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - demo.einsteiners.us
    secretName: https-secret
  rules:
  - host: demo.einsteiners.us
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: app-service
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
  name: adminer-ingress
  
spec:
  rules:
  - host: demo-adminer.einsteiners.us
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: adminer-service
            port:
              number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
  name: goaccess-ingress
spec:
  rules:
  - host: demo-goaccess.einsteiners.us
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: goaccess-service
            port:
              number: 80
